import SwiftUI

struct ContentView: View {
    var body: some View {
        NavigationStack {
            VStack {
                Text("Home")
                Text("Workouts")
                Text("Progress")
                Text("Settings")
            }
        }
    }
}

#Preview {
    ContentView()
}



