...
struct HomeView: View {
    @EnvironmentObject var workoutViewModel: WorkoutViewModel
	
    var body: some View {
        ScrollView {
            VStack(alignment: .leading, spacing: 20){
                Text("Workout Tracker")
                    .font(.largeTitle)
                    .bold()
                
                Text("Let's get moving")
                    .font(.subheadline)
                    .foregroundColor(.gray)
...
